# game_launcher

./: .coveragerc  .gitignore  LICENSE  README.md  README.rst  clippy.toml  diff_heuristics.sh  dump_nametest_tmpl.py  expected_found_games.json  fixture_tuner.py  fixture_tuner.ui  game_launcher.py  justfile  setup.py  test_providers.py  testgui.glade  testgui.py  testgui.ui  testgui_qt.py  tests_to_write_for_filename_to_name.txt
game_launcher_core/: Cargo.toml  clippy.toml
game_launcher_core/src/: lib.rs
game_launcher_core/src/util/: constants.rs  mod.rs  naming.rs
game_launcher_core/src/util/naming/: camelcase.rs  mod.rs
game_providers/: __init__.py  common.py  desura.py  playonlinux.py  xdg_menu.py
game_providers/fallback/: __init__.py  common.py  gog.py  ssokolow_install_sh.py
gui_qt/: application.py  gamecontextmenu.py  gamesview.py  helpers.py  icon_provider.py  mainwindow.py  model.py  searchtoolbar.py  tweaked_widgets.py
plugins/: desura.py  fallback.yapsy-plugin  fallback_gog.py  fallback_guesser.py  fallback_ssokolow_install_sh.py  playonlinux.py  residualvm.py  residualvm.yapsy-plugin  scummvm.py  xdg_menu.py  xdg_menu.yapsy-plugin
plugins/desura_provider/: desura.py  desura.yapsy-plugin
plugins/filesystem_fallback_provider/: fallback.py
plugins/gog_filesystem_fallback/: fallback_gog.py  fallback_gog.yapsy-plugin
requirements/: base.txt  test.txt
src/: game_providers.py  interfaces.py
test/: common.py
test_exes/: .gitignore  Hello.hx  build.sh  detect_exe_type.py  hello.c  hello.cs  hello.desktop  hello.java  hello.pif  hello_dev86.c
(+29 files in other folders)
