[package]
name = "game_launcher_core"
version = "0.1.0"
authors = ["Stephan Sokolow <http://www.ssokolow.com/ContactMe>"]

[lib]
name = "core"
crate-type = ["cdylib"]

[dependencies]
lazy_static = "0.2.6"
regex = "0.2.1"
unicode-segmentation = "1.1.0"
unicode_categories = "0.1.1"

[dependencies.cpython]
version = "0.1"
features = ["extension-module"]
